# OCamlExercises

./: Dockerfile  README.md  docker-compose.yml  dune-project  practice-problems.opam  start.sh
.devcontainer/: devcontainer.json
lib/: beginner.ml  dune  intermediate.ml
test/: beginner_test.ml  dune  intermediate_test.ml
